# PaperWhale

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  create_db.py  deployment.yaml  grafana-ingress.yaml  prometheus-ingress.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  run_socket_mode.py  service.yaml  sql_app.db  test_sql_app.db
.github/workflows/: ci.yaml
app/: main.py
app/api/: main.py
app/bot/: actions.py  app.py  commands.py
app/core/: config.py  scheduler.py
app/db/: database.py  models.py  schemas.py
app/services/: ai_service.py  paper_service.py  scholar_service.py  slack_service.py  user_service.py  user_subscription_service.py
tests/: test_main.py
tests/test_api/: test_main.py
tests/test_bot/: test_add_paper.py  test_summarize_command.py
tests/test_core/: test_scheduler.py
tests/test_services/: test_ai_service.py  test_paper_service.py  test_scholar_service.py  test_user_service.py  test_user_subscription_service.py
