[project]
name = "paperwhale"
version = "0.1.0"
description = "A Slack bot for managing academic papers."
dependencies = [
    "fastapi==0.115.14",
    "slack_bolt==1.23.0",
    "SQLAlchemy==2.0.41",
    "APScheduler==3.11.0",
    "uvicorn==0.35.0",
    "python-dotenv==1.1.1",
    "pydantic-settings==2.10.1",
    "asyncpg==0.30.0",
    "psycopg2-binary==2.9.10",
    "arxiv==2.2.0",
    "aiohttp==3.12.13",
    "google-generativeai==0.8.5",
    "tenacity==9.1.2",
    "bibtexparser==1.4.3",
    "uv==0.7.19",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
namespaces = false

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths    = ["tests"]

[tool.mypy]
ignore_errors = true
ignore_missing_imports = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
